dnl Process this file with autoconf to produce a configure script. -*- Bash -*-
AC_INIT(Makefile.in)
AC_CONFIG_HEADER(config.h)

dnl make sure we are using a recent autoconf version
AC_PREREQ(2.12)

dnl Default is to install in /usr/lib/metahtml.
AC_PREFIX_DEFAULT(/usr/lib/metahtml)

dnl canonicalize the host and os so we can do some tricky things before
dnl parsing options
AC_CANONICAL_HOST

PLATFORM="${host_cpu}-${host_os}"
AC_DEFINE_UNQUOTED(MHTML_SYSTEM_TYPE, [ "${host_cpu}-${host_os}" ])

[OS_NAME=`echo "$host_os" | sed -e 's/[.0-9]*[_U]*[0-9]*$//'`]

dnl Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL
AC_PATH_PROG(FIND, find, [/usr/bin/find])
AC_PATH_PROG(BIN_PWD, pwd, [ : ])
AC_PROG_RANLIB

dnl Checks for header files.
AC_STDC_HEADERS
AC_HEADER_DIRENT
AC_CHECK_HEADERS(unistd.h stdarg.h string.h math.h)
AC_CHECK_HEADERS(time.h sys/time.h file.h sys/file.h)
AC_CHECK_HEADERS(sys/resource.h fcntl.h sys/fcntl.h)
AC_CHECK_HEADERS(sys/ttold.h bstring.h ioctl.h sys/ioctl.h)
AC_CHECK_HEADERS(termio.h termios.h)
AC_CHECK_HEADERS(sys/select.h crypt.h)
AC_HEADER_TIME

dnl Check out the OS.  We may need to link with strange libraries.

OS_LIBS=
if test "$OS_NAME" = "solaris"; then
   OS_NAME=Solaris
   AC_DEFINE(Solaris,1)
   echo "OS is Solaris.  Good luck..."
fi

unset NEED_LIBM
AC_CHECK_LIB(m, floor, NEED_LIBM=true)
AC_CHECK_LIB(m, frexp, NEED_LIBM=true)
AC_CHECK_LIB(m, sqrt, NEED_LIBM=true)
AC_CHECK_LIB(m, cbrt, AC_DEFINE(HAVE_CBRT, 1))
if test "$NEED_LIBM" = true; then
   OS_LIBS="$OS_LIBS -lm"
fi

AC_CHECK_FUNCS(dlopen dlsym dlclose)
if test "$ac_cv_func_dlopen" = yes; then
   HAVE_DYNAMIC=true
fi

AC_CHECK_LIB(dl, dlopen, HAVE_LIBDL=true)
if test "$HAVE_LIBDL" = true; then
   HAVE_DYNAMIC=true
   OS_LIBS="$OS_LIBS -ldl"
   AC_DEFINE(HAVE_DLOPEN,1)
fi

dnl Default extension for shared libraries.
SHARED_EXT=.so

dnl Maybe this is a system using shl_load and shl_findsym?
if test "${HAVE_DYNAMIC}" = ""; then
   AC_CHECK_LIB(dld, shl_load, HAVE_LIBDLD=true)
   if test "$HAVE_LIBDLD" = true; then
      OS_LIBS="$OS_LIBS -ldld"
      SHARED_EXT=.O
      AC_DEFINE(USE_SHL_LOAD,1)
      HAVE_DYNAMIC=true
   fi
fi

if test "$HAVE_DYNAMIC"; then
  SHARED_LD=ld
  DASH_SHARED=""
  case "$host_os" in
    sunos4*)	DASH_SHARED=-Bdynamic ;;
     linux*)	DASH_SHARED=-shared; DLLDFLAGS=-rdynamic ;;
       osf*)	DASH_SHARED=-shared; SHARED_LD=$CC ;;
      irix*)	DASH_SHARED=-shared; SHARED_LD=$CC ;;
      bsdi*)	DASH_SHARED=-r ;;
   freebsd*)	DASH_SHARED=-Bshareable; SHARED_LD='$(LD) 2>/dev/null';;
   openbsd*)	DASH_SHARED=-shared; GCC_FPIC=-fpic SHARED_LD='$(LD) 2>/dev/null';;
    cygwin*)	DASH_SHARED=-shared; GCC_FPIC=-fpic SHARED_LD='$(LD) 2>/dev/null';;
   solaris*)
      # If both the GNU compiler and linker are installed, then we need
      # to add special options in order to compile the modules.
      if test "$GCC" = "yes"; then
	 DASH_SHARED=-shared; GCC_FPIC=-fpic; 
	 SHARED_LD='$(CC)'; DLLDFLAGS="-Xlinker -E";
      else
	 DASH_SHARED=-G;
      fi
      ;;
      hpux*)	DASH_SHARED="-b -E" GCC_FPIC=-fpic DLLDFLAGS="-Xlinker -E" ;;
  esac
else
   echo ""
   echo "I'm sorry, but this system doesn't seem to able to build relocatable"
   echo "shared libraries.  This has become an exercise in futility."
   echo ""
   exit 1
fi

AC_SUBST(SHARED_LD)
AC_SUBST(DASH_SHARED)
AC_SUBST(DLLDFLAGS)
AC_SUBST(SHARED_EXT)
AC_SUBST(OS_NAME)
AC_SUBST(EXTRAINC)
AC_SUBST(GCC_FPIC)

dnl Amother magic check here, which looks hard for Bash.
BASH_SHELL=bash
for dir in /bin /usr/bin /usr/contrib/bin /usr/local/bin /usr/gnu/bin /opt/gnu/bin /usr/local/gnu/bin /usr/local/gnubin; do
   if test -f $dir/bash; then
      BASH_SHELL=$dir/bash
      break;
   fi
done
AC_SUBST(BASH_SHELL)

dnl Checks for library functions.
AC_FUNC_ALLOCA
AC_FUNC_SETPGRP
AC_FUNC_VFORK
AC_CHECK_FUNCS(getcwd memmove strerror strchr strcasecmp strdup flock qsort)
AC_CHECK_FUNCS(getpwnam getgrent setuid seteuid setgid setsid)
AC_CHECK_FUNCS(srandom random initstate setstate rand srand)
AC_CHECK_FUNCS(setlocale mkfifo strstr ftime)

AC_CHECK_FUNCS(gethostbyname)
if test $ac_cv_func_gethostbyname = no; then
    AC_CHECK_LIB(nsl, gethostbyname)
fi

AC_CHECK_FUNCS(connect)
if test $ac_cv_func_connect = no; then
    AC_CHECK_LIB(socket, connect)
fi

AC_CHECK_FUNCS(crypt)
if test $ac_cv_func_crypt = no; then
    AC_CHECK_LIB(crypt, crypt)
fi

OS_LIBS="$LIBS $OS_LIBS"
AC_SUBST(OS_LIBS)

dnl Check for specific types.
AC_TYPE_SIZE_T
AC_TYPE_PID_T
AC_TYPE_SIGNAL
AC_C_CONST
AC_HAVE_TYPE_SIG_T
AC_HAVE_TYPE_TIME_T

if test -f /bin/sh.exe; then
   EXE=".exe"
   if test "$DESLIB" = "../../libdes/libdes.a"; then
      NTLIBS=../$DESLIB;
   elif test "$DESLIB"; then
      NTLIBS=$DESLIB;
   fi
fi
AC_SUBST(MHTML_SYSTEM_TYPE)
AC_SUBST(PLATFORM)
AC_SUBST(EXE)
AC_SUBST(NTLIBS)

WEBBASEDIR=$with_webbasedir
AC_SUBST(WEBBASEDIR)

AC_OUTPUT(Makefile)
